# background-jobs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  flake.nix
examples/actix-example/: Cargo.toml
examples/actix-example/src/: main.rs
examples/actix-jobs-example/: .env  Cargo.toml
examples/actix-jobs-example/src/: main.rs
examples/basic-example/: Cargo.toml
examples/basic-example/src/: main.rs
examples/error-example/: Cargo.toml
examples/error-example/src/: main.rs
examples/long-example/: Cargo.toml
examples/long-example/src/: main.rs
examples/managed-example/: Cargo.toml
examples/managed-example/src/: main.rs
examples/metrics-example/: Cargo.toml
examples/metrics-example/src/: main.rs
examples/panic-example/: Cargo.toml
examples/panic-example/src/: main.rs
examples/postgres-example/: Cargo.toml  docker-compose.yml
examples/postgres-example/src/: main.rs
examples/process-jobs/: .env  Cargo.toml
examples/process-jobs/src/: main.rs
examples/server-jobs-example/: .env  Cargo.toml
examples/server-jobs-example/example-db/: data.mdb  lock.mdb
examples/server-jobs-example/src/: lib.rs
examples/tokio-example/: Cargo.toml
examples/tokio-example/src/: main.rs
examples/tokio-jobs-example/: .env  .gitignore  Cargo.toml
examples/tokio-jobs-example/src/: main.rs
jobs-actix/: Cargo.toml
jobs-actix/src/: actix_job.rs  every.rs  lib.rs  pinger.rs  server.rs  spawn.rs  storage.rs  worker.rs
jobs-core/: Cargo.toml
jobs-core/src/: actix_job.rs  box_error.rs  catch_unwind.rs  job.rs  job_info.rs  lib.rs  processor.rs  processor_map.rs  processors.rs  stats.rs  storage.rs  unsend_job.rs
jobs-executor/: Cargo.toml
jobs-metrics/: Cargo.toml
jobs-metrics/src/: lib.rs  recorder.rs
jobs-postgres/: Cargo.toml
jobs-postgres/src/: embedded.rs  future.rs  lib.rs  schema.rs
jobs-postgres/src/migrations/: V001__create_queue.rs
jobs-server/: Cargo.toml
jobs-server-tokio/: Cargo.toml
jobs-server-tokio/src/: client.rs  lib.rs  server.rs  spawner.rs  worker.rs
jobs-server-tokio/src/server/: mod.rs  portmap.rs  pull.rs  push.rs  stalled.rs
jobs-server-tokio/src/worker/: config.rs  mod.rs  portmap.rs
jobs-server/src/: lib.rs  spawner.rs
jobs-server/src/server/: mod.rs  portmap.rs  pull.rs  push.rs  stalled.rs
jobs-server/src/worker/: config.rs  mod.rs  portmap.rs
jobs-sled/: Cargo.toml  README.md
jobs-sled/src/: lib.rs  sled_wrappers.rs
jobs-tokio/: Cargo.toml
jobs-tokio/src/: every.rs  lib.rs  spawn.rs  storage.rs  worker.rs
scripts/: update-schema.sh
src/: lib.rs  recorder.rs
src/recorder/: bucket.rs
