[package]
name = "background-jobs"
description = "Background Jobs implemented with actix and futures"
version = "0.9.1"
license-file = "LICENSE"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/Aardwolf/background-jobs"
readme = "README.md"
keywords = ["jobs", "processor", "actix"]
edition = "2018"

[workspace]
members = [
    "jobs-actix",
    "jobs-core",
    "jobs-sled",
    "examples/actix-example",
]

[features]
default = ["background-jobs-actix"]

[dependencies.background-jobs-core]
version = "0.9.4"
path = "jobs-core"

[dependencies.background-jobs-actix]
version = "0.9.4"
path = "jobs-actix"
optional = true
