[package]
name = "background-jobs"
description = "asynchronous background jobs implemented with pluggable backends and runtimes"
version = "0.17.0"
license = "AGPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/background-jobs"
readme = "README.md"
keywords = ["jobs", "actix", "tokio", "postgres", "sled"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
  "jobs-actix",
  "jobs-core",
  "jobs-metrics",
  "jobs-postgres",
  "jobs-sled",
  "jobs-tokio",
  "examples/basic-example",
  "examples/long-example",
  "examples/managed-example",
  "examples/metrics-example",
  "examples/panic-example",
  "examples/postgres-example",
  "examples/tokio-example",
]

[features]
default = ["actix-rt", "metrics"]
actix-rt = ["dep:background-jobs-actix"]
metrics = ["dep:background-jobs-metrics"]
postgres = ["dep:background-jobs-postgres"]
sled = ["dep:background-jobs-sled"]
tokio = ["dep:background-jobs-tokio"]
completion-logging = [
  "background-jobs-core/completion-logging",
  "error-logging",
]
error-logging = ["background-jobs-core/error-logging"]

[dependencies.background-jobs-core]
version = "0.17.0"
path = "jobs-core"

[dependencies.background-jobs-actix]
version = "0.17.0"
path = "jobs-actix"
optional = true

[dependencies.background-jobs-metrics]
version = "0.17.0"
path = "jobs-metrics"
optional = true

[dependencies.background-jobs-postgres]
version = "0.17.0"
path = "jobs-postgres"
optional = true

[dependencies.background-jobs-sled]
version = "0.17.0"
path = "jobs-sled"
optional = true

[dependencies.background-jobs-tokio]
version = "0.17.0"
path = "jobs-tokio"
optional = true
