[package]
name = "background-jobs-actix"
description = "in-process jobs processor based on Actix"
version = "0.9.4"
license-file = "../LICENSE"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/Aardwolf/background-jobs"
keywords = ["jobs", "processor"]
readme = "../README.md"
edition = "2018"

[dependencies]
actix-rt = "2.0.0"
anyhow = "1.0"
async-mutex = "1.0.1"
async-trait = "0.1.24"
background-jobs-core = { version = "0.9.0", path = "../jobs-core", features = ["with-actix"] }
chrono = "0.4"
log = "0.4"
num_cpus = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["sync"] }
uuid = { version ="0.8.1", features = ["v4", "serde"] }
