[package]
name = "background-jobs-actix"
description = "in-process jobs processor based on Actix"
version = "0.18.0"
license = "AGPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/background-jobs"
keywords = ["jobs", "processor", "actix"]
readme = "../README.md"
edition = "2021"

[dependencies]
actix-rt = "2.5.1"
async-trait = "0.1.24"
background-jobs-core = { version = "0.18.0", path = "../jobs-core" }
metrics = "0.22.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt",
  "sync",
  "time",
  "tracing",
] }
uuid = { version = "1", features = ["v7", "serde"] }
