[package]
name = "background-jobs-core"
description = "Core types for implementing an asynchronous jobs processor"
version = "0.9.4"
license-file = "../LICENSE"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/Aardwolf/background-jobs"
keywords = ["jobs", "processor"]
readme = "../README.md"
edition = "2018"

[features]
default = []
with-actix = ["actix-rt", "tokio"]

[dependencies]
actix-rt = { version = "2.0.0", optional = true }
anyhow = "1.0"
async-mutex = "1.0.1"
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", optional = true, default-features = false, features = ["sync"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
