[package]
name = "background-jobs-core"
description = "Core types for implementing an asynchronous jobs processor"
version = "0.17.0"
license = "AGPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/background-jobs"
keywords = ["jobs", "processor"]
readme = "../README.md"
edition = "2021"

[features]
default = ["error-logging"]
completion-logging = []
error-logging = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1.24"
event-listener = "4"
metrics = "0.22.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tracing = "0.1"
tracing-futures = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["serde", "v7"] }
