[package]
name = "background-jobs-metrics"
description = "Background Jobs implemented with actix and futures - metrics subscriber"
version = "0.14.0"
license = "AGPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/background-jobs"
keywords = ["jobs", "processor", "actix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.20.1"
metrics-util = "0.14.0"
