[package]
name = "background-jobs-metrics"
description = "Background Jobs implemented with actix and futures - metrics subscriber"
version = "0.16.0"
license = "AGPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/background-jobs"
readme = "../README.md"
keywords = ["jobs", "processor", "actix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
background-jobs-core = { version = "0.16.0", path = "../jobs-core" }
metrics = "0.22.0"
metrics-util = "0.16.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["serde", "v7"] }
