[package]
name = "background-jobs-postgres"
version = "0.17.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1.24"
background-jobs-core = { version = "0.17.0-beta.1", path = "../jobs-core" }
barrel = { version = "0.7.0", features = ["pg"] }
dashmap = "5.5.3"
deadpool = { version = "0.9", features = ["rt_tokio_1"] }
diesel = { version = "2.1.4", features = ["postgres_backend", "serde_json", "time", "uuid"] }
diesel-async = { version = "0.4.1", default-features = false, features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
flume = "0.11.0"
futures-core = "0.3.30"
metrics = "0.22.0"
pin-project-lite = "0.2.13"
refinery = { version = "0.8.11", features = ["postgres", "tokio-postgres"] }
serde_json = "1.0.111"
time = "0.3.31"
tokio = { version = "1.35.1", default-features = false, features = ["rt", "tracing"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-time-0_3", "with-serde_json-1"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v7"] }
