[package]
name = "background-jobs-server-tokio"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-threadpool = "0.1"
zmq = "0.8"

[features]
default = ["tokio-zmq"]

[dependencies.jobs-core]
version = "0.1"
path = "../jobs-core"

[dependencies.tokio-zmq]
version = "0.8"
optional = true

[dependencies.futures-zmq]
version = "0.3"
optional = true
