[package]
name = "background-jobs-sled-storage"
description = "Sled storage backend for background-jobs"
version = "0.10.0"
license = "AGPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/background-jobs"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
background-jobs-core = { version = "0.17.0", path = "../jobs-core" }
bincode = "1.2"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
time = { version = "0.3", features = ["serde-human-readable"] }
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "tracing"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
