[package]
name = "background-jobs-tokio"
description = "in-process jobs processor based on Tokio"
version = "0.18.0"
license = "AGPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/background-jobs"
keywords = ["jobs", "processor", "tokio"]
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
background-jobs-core = { version = "0.18.0", path = "../jobs-core" }
metrics = "0.22.0"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "rt", "sync", "time", "tracing"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v7", "serde"] }
