[package]
name = "panic-example"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.0.0"
anyhow = "1.0"
background-jobs = { version = "0.15.0", path = "../..", features = [
  "error-logging",
] }
background-jobs-sled-storage = { version = "0.10.0", path = "../../jobs-sled" }
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
