[package]
name = "postgres-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
background-jobs = { version = "0.17.0", features = ["background-jobs-postgres"], path = "../.." }
tokio = { version = "1.35.1", features = ["full"] }
