[package]
name = "server-jobs-example"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2018"

[dependencies]
dotenv = "0.13"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"

[dependencies.jobs]
version = "0.1"
path = "../.."
default-features = false
features = ["jobs-server-tokio"]
